force-app/main/default/objects/VICentralisation__c/VICentralisation__c.object-meta.xml
<CustomObject>
    <label>Centralisation</label>
    <nameField>
        <label>Nom de Centralisation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centralisation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>