force-app/main/default/objects/VICentralisation__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>if(contains(Source__c,&apos;Vision&apos;), &apos;Vision&apos;, Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application</label>
    <type>Text</type>
</CustomField>