force-app/main/default/objects/VICentralisation__c/fields/Classe_de_compte__c.field-meta.xml
<CustomField>
    <fullName>Classe_de_compte__c</fullName>
    <formula>left( Compte__c ,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Classe de compte</label>
    <type>Text</type>
</CustomField>