force-app/main/default/objects/VICentralisation__c/fields/PR_PV__c.field-meta.xml
<CustomField>
    <fullName>PR_PV__c</fullName>
    <label>PR PV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>